Changelog
=========

1.9 (unreleased)
----------------

* Added German translation and moved portlet title and description
  to i18:domain plone to make them translateable in the
  add portlet dropdown, too [fRiSi]
  
* Fixed #1: The defaults in the form and the defaults on the Assignment
  were different. [regebro]
  
* Fixed #5: Added portlet id based class to the portlet tag. [regebro]
  
1.8 (2013-05-02)
----------------

* pep8 and Plone 4.3 compatibility [vangheem]
* repository moved to github [khink]

1.7 (2011-10-27)
----------------

* use normal Manage Portlets permission instead of cmf.ManagePortal.
  [vangheem]
* small fix in vocabularies.py to make it compatible with plone4.1
  [huub_bouma]

1.6 (2011-02-15)
----------------
* Fixed an issue while reordering the portlets when a collective.portlet.content
  was in place. [sneridagh]

1.5 (2011-01-21)
----------------

* Added i18n support [keul]

* Added italian translation [keul]

1.4 (2010-11-05)
----------------

* Fixed an issue where an image would be attempted coerced to unicode
  instead of having its tag rendered. [malthe]

* If the border is required omitted, render the portlet item body
  instead of rendering the content item's body. Note that (as
  previously), omitting the border implicitly means omitting the
  header and footer. [malthe]

1.3 (2010-07-29)
----------------

* Plone 4 compatibility (while maintaining Plone 3 compatibility)
  [pcaro]

* Added options to display fields other than the body text.
  [yomatters]

* Allow portlet border, header and footer to be disabled.
  [khink]

* Added z3c.autoinlude.plugin so we don't need to add zcml to buildout.
  [khink]

1.2 - 2009-1-30
---------------

* Test coverage with translated content portlets via LinguaPlone
  [andrewb]

* Improved test coverage over original paster created boilerplate portlet
  tests.  Now verify the portlet renderer contains the body text of the
  chosen content item.
  [andrewb]
