@@ -12,6 +12,9 @@ Changelog
   were different. [regebro]
   
 * Fixed #5: Added portlet id based class to the portlet tag. [regebro]
+
+* Fixed #8: You now only need View permission on the content, not on
+  it's parents. [regebro]
   
 1.8 (2013-05-02)
 ----------------
